Delete background animation and update background.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 
 	<body>
 		<div class="background-images">
-			<img src="image/backgroundImage1.jpg">
-			<img src="image/backgroundImage2.jpg">
-			<img src="image/backgroundImage3.jpg">
+			<img src="image/background-image.jpg">
 		</div>
 
 		<div class="toggle-off">
