Create greetingMessage function.

--- a/index.html
+++ b/index.html
@@ -65,14 +65,7 @@
 					<span id="hours">..</span><span class="two-points">:</span><span id="minutes">..</span>
 				</div>
 
-				<div id="greeting">Good afternoon, Helene.</div>
-
-				<div id="main-focus-wraper">
-					<form method="post">
-				    	<label for="main-focus">What is your main focus today?</label>
-				    	</br> <input type="text" autocomplete="off" id="main-focus"/>
-					</form>
-				</div>
+				<div class="greeting"></div>
 			</div>
 
 			<div id="quote-block">
