--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="style.css"/>
+		<link rel="stylesheet" href="css/greeting.css"/>
 		<link rel="iconstyle" href="/fonts-icons/icons-reference.html"/>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
 		<meta charset="utf-8" />
@@ -65,7 +66,10 @@
 					<span id="hours">..</span><span class="two-points">:</span><span id="minutes">..</span>
 				</div>
 
-				<div class="greeting"></div>
+				<div class="greeting">
+					<div class="greeting__when"></div>
+					<input type="text" class="greeting__who" placeholder="what's your name?" onkeypress="this.style.width = ((this.value.length + 1) * 20) + 'px';"/>
+				</div>
 			</div>
 
 			<div id="quote-block">
