Animate hearts when  heart quote clicked.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<link rel="stylesheet" href="style.css"/>
 		<link rel="stylesheet" href="css/greet.css"/>
+		<link rel="stylesheet" href="css/hearts-animation.css"/>
 		<link rel="iconstyle" href="/fonts-icons/icons-reference.html"/>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
 		<meta charset="utf-8" />
@@ -79,10 +80,11 @@
 					<span class="author"></span>
 					<span>
 						<i class="icon icon-like-love-streamline icon-link"></i>
-						<i class="icon icon-twitter icon-link"></i>
+						<a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fhelene-andre.github.io/Momentum%2F&text=Awesome+web+app!+(Or nearly)&hashtags=yeahbaby, coolwebsite" target="_blank"><i class="icon icon-twitter icon-link"></i></a>
 					</span>
 				</div>
 			</div>
+			<div class="quote__hearts"></div>
 		</div>
 
 		<div class="settings-geolocation-wrapper">
