Improve greeting UI.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="style.css"/>
-		<link rel="stylesheet" href="css/greet.css"/>
+		<link rel="stylesheet" href="css/greeting.css"/>
 		<link rel="iconstyle" href="/fonts-icons/icons-reference.html"/>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
 		<meta charset="utf-8" />
@@ -66,9 +66,9 @@
 					<span id="hours">..</span><span class="two-points">:</span><span id="minutes">..</span>
 				</div>
 
-				<div class="greet">
-					<div class="greet__time"></div>
-					<input type="text" id="greet__username" class="greet__username" placeholder="what's your name?"/>
+				<div class="greeting">
+					<div class="greeting__message"></div>
+					<div id="greeting__username" class="greeting__username empty" spellcheck="false" contenteditable></div>
 				</div>
 			</div>
 
