--- a/index.html
+++ b/index.html
@@ -91,8 +91,33 @@
 		<div class="settings-geolocation-wrapper">
 			<div>
 				<form class="toggle-off" id="settings-block">
-					<label id="settings" for="settings-checkbox" class="icon icon-settings"></label>
-					<div class="popup3" id="settings-popup-window"></div>
+					<label id="settings-label" for="settings-checkbox" class="icon icon-settings"></label>
+					<div class="settings" id="settings-popup-window">
+						<div class="wrapper">
+							<div class="settings__left-block">
+								<ul class="settings__left-block--list">
+									<li class="settings__item-1">General</li>
+									<li class="settings__item-1">Todo</li>
+									<li class="settings__item-1">Mantras</li>
+									<li class="settings__item-1">Photos</li>
+									<li class="settings__item-1">Quotes</li>
+									<li class="settings__item-1">Links</li>
+									<li class="settings__item-1">Balance</li>
+									<li class="settings__item-2">Help</li>
+									<li class="settings__item-2">What's New</li>
+									<li class="settings__item-2">About</li>
+									<li class="settings__item-2">Upgrade to Plus</li>
+								</ul>
+								<div class="settings__left-block--login">
+									<div class="login__title">Log In</div>
+									<div class="login__description">Sync your account & more!</div>
+								</div>
+							</div>
+							<div>
+								<div>Second div</div>
+							</div>
+						</div>
+					</div>
 				</form>
 			</div>
 			<div id="geolocation-block">
