Update fonts and images.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 	<head>
 		<link rel="stylesheet" href="style.css"/>
 		<link rel="stylesheet" href="css/greeting.css"/>
-		<link rel="iconstyle" href="/fonts-icons/icons-reference.html"/>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +16,11 @@
 		<div class="background-images">
 			<img id="background-src" src="">
 		</div>
-
+		<form action="https://www.google.com/search">
+			<label for="gsearch">Search Google:</label>
+			<input type="search" id="gsearch" name="q">
+			<input type="submit">
+		</form>
 		<div class="toggle-off">
 			<form id="links-block">
 				<div class="links" id="links" for="links-checkbox">Links</div>
@@ -114,7 +117,17 @@
 								</div>
 							</div>
 							<div>
-								<div>Second div</div>
+								<div>General</div>
+								<div>Todo</div>
+								<div>Mantras</div>
+								<div>Photos</div>
+								<div>Quotes</div>
+								<div>Links</div>
+								<div>Balance</div>
+								<div>Help</div>
+								<div>What's New</div>
+								<div>About</div>
+								<div>Upgrade to Plus</div>
 							</div>
 						</div>
 					</div>
