--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					<span class="author"></span>
 					<span>
 						<i id="like-quote" class="icon icon-heart-o icon-link"></i>
-						<a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fhelene-andre.github.io/Momentum%2F&text=Awesome+web+app!&hashtags=yeahbaby, coolwebsite" target="_blank">
+						<a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fhelene-andre.github.io/Momentum%2F&text=Awesome+web+app!&hashtags=coolwebsite" target="_blank">
 							<i id="twitter" class="icon icon-twitter icon-link"></i>
 						</a>
 					</span>
